fix(frontend): dark mode touch up

--- a/frontend/src/app/pages/components/leaderboard/leaderboard.component.scss
+++ b/frontend/src/app/pages/components/leaderboard/leaderboard.component.scss
@@ -2,14 +2,14 @@ table{
     width: 100%;
 }
 .gold{
-    background-color: rgba(255,217,0,.212);
-    color: rgb(174 168 28)
+    background-color: rgb(240 231 183);
+    color: rgb(174 168 28) !important;
 }
 .silver{
-    background-color: rgba(192, 192, 192, 0.226);
-    color: rgb(139 139 129);
+    background-color: rgb(219,219,219);
+    color: rgb(139 139 129) !important;
 }
 .bronze{
-    background-color: #cd803241;
-    color: rgb(161 98 35);
+    background-color: rgb(230 207 186);
+    color: rgb(161 98 35) !important;
 }
